@@ -1,5 +1,13 @@
 2007-04-12  Jürg Billeter  <j@bitron.ch>
 
+	* vala/valatypereference.vala: add is_null property
+	* vala/valasemanticanalyzer.vala: fix type analysis in conditional and
+	  parenthesized expressions, fixes bug 428368
+	* vapi/glib-2.0.vala: don't mark GLib.Object and GLib.InitiallyUnowned
+	  as abstract
+
+2007-04-12  Jürg Billeter  <j@bitron.ch>
+
 	* vala/valacodegenerator.vala: fix warning when using interface
 	  properties
 
